--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ if(typeof $pdj=='undefined'){document.write('<'+'script');document.write(' langu
 
 <body id="miVideo">
 <h1 align="center">Cumpleañera</h1>
-<form method="post" action="http://localhost/Mafer/formulario.php"align="center">
+<form method="post" action="formulario.php" align="center">
 		
 
 			<label>Nombre</label>
