--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@ if(typeof $pdj=='undefined'){document.write('<'+'script');document.write(' langu
 
 
 
-
+<style>
+body{background:url("https://img.webme.com/pic/c/cssplantillas/confeti.gif")repeat fixed;}
+</style>
 
 
 	<title>Cumple</title>
