--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@ body{background:url("https://img.webme.com/pic/c/cssplantillas/confeti.gif")repe
 
 
 <div align="center"><img src="images/felizcumple.jpg"></div>
-
+<script type="text/javascript" src="http://inacho07.googlepages.com/starfield.js"></script>
 </body>
 </html>
