--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body{background:url("https://img.webme.com/pic/c/cssplantillas/confeti.gif")repe
 
 	
 	
-</video>
+<video  src="video/index.mp4" controls autoplay muted loop ></video>
 
 
 
