--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body id="miVideo">
 <h1 align="center">Cumpleañera</h1>
-<form method="post" action="formulario.html" align="center">
+<form method="post" action="formulario2.html" align="center">
 		
 
 			<label>Nombre</label>
